# time-and-attendance

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_clinics_users.py  002_create_shifts_schedules.py  003_create_attendance_punches.py  004_create_attendance_days.py  005_create_attendance_corrections.py  006_create_leave_tables.py  007_create_leave_balances.py  008_closings_and_audit.py  009_leave_type_tenure_based.py  010_mt1_email_unique_per_clinic.py  011_mt1_clinic_slug_status.py  012_leave_carryover.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/bootstrap/: __init__.py  leave_defaults.py  seed.py
backend/app/core/: clinic_time.py  config.py  kr_labor.py  leave_accrual.py  permissions.py  security.py
backend/app/middleware/: logging_mw.py  security.py
backend/app/models/: __init__.py  attendance_correction.py  attendance_day.py  attendance_punch.py  audit_log.py  clinic.py  enums.py  leave_balance.py  leave_request.py  (+5 more)
backend/tests/: conftest.py  test_attendance.py  test_attendance_calculation.py  test_auth.py  test_clinic_onboarding.py  test_clinic_time.py  test_closings.py  test_corrections.py  test_hardening.py  test_health.py  test_kr_labor.py  test_leave.py  test_leave_accrual.py  test_leave_balances.py  test_platform_admin.py  test_reports.py  test_schedules.py  test_shifts.py  test_staff.py  test_tenant_isolation.py
(+94 files in other folders)
